--- a/run.ipynb
+++ b/run.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -21,84 +21,49 @@
      "text": [
       "\u001b[34m\u001b[1mwandb\u001b[0m: W&B API key is configured (use `wandb login --relogin` to force relogin)\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: Tracking run with wandb version 0.10.17\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Syncing run \u001b[33mtest\u001b[0m\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Syncing run \u001b[33mfirst\u001b[0m\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: ⭐️ View project at \u001b[34m\u001b[4mhttps://wandb.ai/maxs/depth_refine\u001b[0m\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: 🚀 View run at \u001b[34m\u001b[4mhttps://wandb.ai/maxs/depth_refine/runs/2brzxlh3\u001b[0m\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Run data is saved locally in /workspace/depth_refine_reconstruct/wandb/run-20210216_084017-2brzxlh3\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: 🚀 View run at \u001b[34m\u001b[4mhttps://wandb.ai/maxs/depth_refine/runs/cxy4irto\u001b[0m\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Run data is saved locally in /workspace/depth_refine_reconstruct/wandb/run-20210216_124111-cxy4irto\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: Run `wandb offline` to turn off syncing.\n",
       "\n",
       "Dataset BaseDataset was created\n",
-      "The number of training images = 64\n",
+      "Warning, drop last batch\n",
+      "The number of training images = 38577\n",
       "Dataset BaseDataset was created\n",
-      "The number of test images = 64\n",
+      "The number of test images = 5058\n",
       "---------- Networks initialized -------------\n",
       "[Network netG_A] Total number of parameters : 3.588 M\n",
       "-----------------------------------------------\n",
       "/opt/conda/lib/python3.7/site-packages/torch/nn/functional.py:3063: UserWarning: Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
       "  \"See the documentation of nn.Upsample for details.\".format(mode))\n",
-      "16 img procesed out of 64, taken 0.69 sec per 1 batch\n",
-      "32 img procesed out of 64, taken 0.18 sec per 1 batch\n",
-      "48 img procesed out of 64, taken 0.18 sec per 1 batch\n",
-      "64 img procesed out of 64, taken 0.18 sec per 1 batch\n",
-      "Validation\n",
-      "saving the model at the end of epoch 1, iters 4\n",
-      "End of epoch 1 / 2 \t Time Taken: 13.64 sec\n",
-      "16 img procesed out of 64, taken 0.18 sec per 1 batch\n",
-      "32 img procesed out of 64, taken 0.18 sec per 1 batch\n",
-      "48 img procesed out of 64, taken 0.18 sec per 1 batch\n",
-      "64 img procesed out of 64, taken 0.18 sec per 1 batch\n",
-      "Validation\n",
-      "saving the model at the end of epoch 2, iters 8\n",
-      "End of epoch 2 / 2 \t Time Taken: 18.28 sec\n",
-      "Finish\n",
+      "5120 img procesed out of 38577, taken 0.27 sec per 1 batch\n",
+      "10240 img procesed out of 38577, taken 0.27 sec per 1 batch\n",
+      "15360 img procesed out of 38577, taken 0.28 sec per 1 batch\n",
+      "^C\n",
+      "Traceback (most recent call last):\n",
+      "  File \"train.py\", line 115, in <module>\n",
+      "    model.optimize_param()\n",
+      "  File \"/workspace/depth_refine_reconstruct/models/model.py\", line 117, in optimize_param\n",
+      "    self.backward_G()\n",
+      "  File \"/workspace/depth_refine_reconstruct/models/model.py\", line 111, in backward_G\n",
+      "    self.loss_depth_dif_full = self.L1_(self.depth_B.cuda(), self.depth_A2B.cuda())\n",
+      "KeyboardInterrupt\n",
       "\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Waiting for W&B process to finish, PID 5540\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Program ended successfully.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:                                                                                \n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Find user logs for this run at: /workspace/depth_refine_reconstruct/wandb/run-20210216_084017-2brzxlh3/logs/debug.log\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Find internal logs for this run at: /workspace/depth_refine_reconstruct/wandb/run-20210216_084017-2brzxlh3/logs/debug-internal.log\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Run summary:\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:                    Ld 0.9117\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:                    Lg 0.5604\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:                    Ln 0.1927\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:                    Lb 1.73965\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:        depth_dif_full 6166.64355\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:           depth_dif_4 0.91169\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:                 _step 8\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:              _runtime 46\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:            _timestamp 1613464863\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:                 Epoch 2\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:   test_depth_dif_full 5660.98621\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:      test_depth_dif_4 0.65783\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Run history:\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:                    Ld █▃▂▁▁▂▂▁\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:                    Lg █▄▄▄▁▂▂▁\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:                    Ln █▅▄▄▂▂▃▁\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:                    Lb █▁▁▂▁▁▁▁\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:        depth_dif_full ▇▆▅█▃▂▂▁\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:           depth_dif_4 █▃▂▁▁▂▂▁\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:                 _step ▁▂▃▄▅▆▇█\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:              _runtime ▁▂▂▄▅▆▆█\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:            _timestamp ▁▂▂▄▅▆▆█\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:                 Epoch ▁█\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:   test_depth_dif_full █▁\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:      test_depth_dif_4 ▁█\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Synced 5 W&B file(s), 11 media file(s), 0 artifact file(s) and 0 other file(s)\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Synced \u001b[33mtest\u001b[0m: \u001b[34mhttps://wandb.ai/maxs/depth_refine/runs/2brzxlh3\u001b[0m\n"
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Waiting for W&B process to finish, PID 26219\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Program failed with code 255.  Press ctrl-c to abort syncing.\n"
      ]
     }
    ],
    "source": [
-    "!python train.py --name test\\\n",
-    "--gpu_ids 2\\\n",
-    "--batch_size 16\\\n",
+    "!python train.py --name first\\\n",
+    "--gpu_ids 0,1,3\\\n",
+    "--batch_size 64\\\n",
     "--lr_G 1e-4\\\n",
     "--img_freq 80\\\n",
     "--loss_freq 30\\\n",
-    "--save_epoch_freq 5\\\n",
-    "--n_epochs 30"
+    "--save_epoch_freq 15\\\n",
+    "--n_epochs 41"
    ]
   },
   {
