--- a/run.ipynb
+++ b/run.ipynb
@@ -12,6 +12,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21.333333333333332"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "52288"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "38577"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -56,9 +85,10 @@
     }
    ],
    "source": [
-    "!python train.py --name first\\\n",
-    "--gpu_ids 0,1,3\\\n",
-    "--batch_size 64\\\n",
+    "!python train.py --name test\\\n",
+    "--max_dataset_size 32\\\n",
+    "--gpu_ids 2\\\n",
+    "--batch_size 16\\\n",
     "--lr_G 1e-4\\\n",
     "--img_freq 80\\\n",
     "--loss_freq 30\\\n",
